Se modificaron las instrucciones

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     <div id="introSection">
       <div class="alert alert-info">
         <p><strong>Instrucciones:</strong></p>
-        <p>Este es un test para conocer tu estilo de escucha activa. No hay respuestas correctas o incorrectas, simplemente distintas formas de interactuar con otras personas.</p>
-        <p>Por favor, responde con sinceridad y completa todas las preguntas.</p>
+        <p>Este test está diseñado para ayudarte a descubrir tu estilo de escucha activa. No hay respuestas correctas o incorrectas, solo diferentes maneras de interactuar con los demás. Los resultados te mostrarán cuatro aspectos importantes:</p>
+        <ul>
+          <li><strong>Escuchar sin interrumpir</strong></li>
+          <li><strong>Atención plena</strong></li>
+          <li><strong>Percibir emociones</strong></li>
+          <li><strong>Facilitar la expresión</strong></li>
+        </ul>
+        <p>Recuerda, no estamos aquí para etiquetar, sino para explorar oportunidades de crecimiento. Los resultados están pensados para apoyarte en el desarrollo de tus habilidades de escucha activa. Si encuentras áreas donde puedes mejorar, ¡no te preocupes! La idea es identificar oportunidades para seguir creciendo.</p>
+        <p>Por favor, responde con sinceridad y completa todas las preguntas. ¡Gracias por participar!</p>
       </div>
-      <!-- <div class="mb-3">
-        <label for="nombre" class="form-label">Ingresa tu nombre:</label>
-        <input type="text" id="nombre" class="form-control" placeholder="Tu nombre">
-      </div> -->
       <button class="btn btn-primary" onclick="comenzarTest()">Comenzar Test</button>
     </div>
+    
 
     <div id="testSection" style="display:none" class="container">
       <div class="progress mb-4 sticky-top">
