--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <div id="introSection">
       <div class="alert alert-info">
         <p><strong>Instrucciones:</strong></p>
-        <p>Este test está diseñado para ayudarte a descubrir tu estilo de escucha activa. No hay respuestas correctas o incorrectas, solo diferentes maneras de interactuar con los demás. Los resultados te mostrarán cuatro aspectos importantes:</p>
+        <p>Este test está diseñado con veinte afirmaciones y cada una presenta dos opciones: Sí o No.  Por favor, responde con sinceridad y completa todas las preguntas. No hay respuestas correctas o incorrectas y el propósito de este ejercicio es ayudarte a descubrir tu capacidad de escucha activa. Los resultados te mostrarán cuatro aspectos importantes de tus interacciones con otras personas:</p>
         <ul>
-          <li><strong>Escuchar sin interrumpir</strong></li>
-          <li><strong>Atención plena</strong></li>
-          <li><strong>Percibir emociones</strong></li>
-          <li><strong>Facilitar la expresión</strong></li>
+          <li><strong>Escuchar sin interrumpir.</strong></li>
+          <li><strong>Escuchar con plena atención.</strong></li>
+          <li><strong>Escuchar percibiendo emociones de los demás.</strong></li>
+          <li><strong>Escuchar para facilitar la expresión del hablante.</strong></li>
         </ul>
         <p>Recuerda, no estamos aquí para etiquetar, sino para explorar oportunidades de crecimiento. Los resultados están pensados para apoyarte en el desarrollo de tus habilidades de escucha activa. Si encuentras áreas donde puedes mejorar, ¡no te preocupes! La idea es identificar oportunidades para seguir creciendo.</p>
-        <p>Por favor, responde con sinceridad y completa todas las preguntas. ¡Gracias por participar!</p>
+        <p>Una vez que respondas, pulsa el botón para conocer tus resultados. Si te equivocas, refresca la página y vuelve a comenzar.</p>
+        <p>¡Gracias por participar!</p>
       </div>
       <button class="btn btn-primary" onclick="comenzarTest()">Comenzar Test</button>
     </div>
